@@ -3,12 +3,12 @@ package hungteen.immortal.common.item.eixirs;
 import hungteen.immortal.api.ImmortalAPI;
 import hungteen.immortal.api.interfaces.IElixirItem;
 import hungteen.immortal.api.registry.IRealm;
-import hungteen.immortal.api.registry.ISpiritualRoot;
 import hungteen.immortal.common.item.ItemTabs;
 import hungteen.immortal.impl.Realms;
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.NonNullList;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.InteractionHand;
@@ -35,10 +35,12 @@ public abstract class ElixirItem extends Item implements IElixirItem{
 
     private static final String ACCURACY = "Accuracy";
     private final Rarity elixirRarity;
+    private final int color;
 
-    public ElixirItem(Rarity rarity) {
+    public ElixirItem(Rarity rarity, int color) {
         super(new Properties().tab(ItemTabs.ELIXIRS));
         this.elixirRarity = rarity;
+        this.color = color;
     }
 
     @Override
@@ -60,7 +62,14 @@ public abstract class ElixirItem extends Item implements IElixirItem{
         Optional<Boolean> canOpt = checkEating(level, livingEntity, stack);
         if(canOpt.isPresent()){
             if(canOpt.get()){
-                eatElixir(level, livingEntity, stack, getAccuracy(stack));
+                Accuracies accuracy = getAccuracy(stack);
+                if(Accuracies.hasUsage(accuracy)){
+                    eatElixir(level, livingEntity, stack, getAccuracy(stack));
+                } else if(accuracy == Accuracies.TRASH){
+                    eatTrash(level, livingEntity, stack);
+                } else if(accuracy == Accuracies.TOXIC){
+                    eatToxic(level, livingEntity, stack);
+                }
             } else{
                 explode(level, livingEntity, stack);
             }
@@ -85,6 +94,14 @@ public abstract class ElixirItem extends Item implements IElixirItem{
 
     protected abstract void eatElixir(Level level, LivingEntity livingEntity, ItemStack stack, Accuracies accuracy);
 
+    protected void eatTrash(Level level, LivingEntity livingEntity, ItemStack stack){
+
+    }
+
+    protected void eatToxic(Level level, LivingEntity livingEntity, ItemStack stack){
+
+    }
+
     /**
      * Return False to explode, True to successfully eat elixir, absent to pass.
      */
@@ -92,14 +109,34 @@ public abstract class ElixirItem extends Item implements IElixirItem{
 
     @Override
     public void appendHoverText(ItemStack stack, @Nullable Level level, List<Component> components, TooltipFlag tooltipFlag) {
-        components.add(new TranslatableComponent("tooltip." + this.getRegistryName().getNamespace() + "." + this.getRegistryName().getPath()).withStyle(ChatFormatting.GREEN));
-        components.add(new TranslatableComponent("tooltip.immortal.elixir.accuracy", getAccuracyValue(stack) + "%").withStyle(ChatFormatting.AQUA));
+        final Accuracies accuracy = getAccuracy(stack);
+        if(Accuracies.hasUsage(accuracy)){
+            components.add(new TranslatableComponent("tooltip." + this.getRegistryName().getNamespace() + "." + this.getRegistryName().getPath(), getUsagesComponentArgs(accuracy)).withStyle(ChatFormatting.GREEN));
+        }
+        components.add(new TranslatableComponent("tooltip.immortal.elixir.accuracy", getAccuracyValue(stack) + "%").withStyle(accuracy.getFormats())
+                .append(Accuracies.getComponent(accuracy))
+        );
     }
 
     @Override
     public void fillItemCategory(CreativeModeTab tab, NonNullList<ItemStack> stacks) {
-        super.fillItemCategory(tab, stacks);
+        if(this.allowdedIn(tab)){
+            for (Accuracies value : Accuracies.values()) {
+                if(tab == CreativeModeTab.TAB_SEARCH || value == Accuracies.COMMON || value == Accuracies.MASTER){
+                    ItemStack stack = new ItemStack(this);
+                    setAccuracy(stack, value.getAccuracy());
+                    stacks.add(stack);
+                }
+            }
+        }
+    }
 
+    protected List<Object> getUsagesComponentArgs(Accuracies accuracy){
+        return List.of();
+    }
+
+    public int getColor(int id){
+        return id == 0 ? color : -1;
     }
 
     @Override
@@ -129,7 +166,7 @@ public abstract class ElixirItem extends Item implements IElixirItem{
     }
 
     public static Accuracies getAccuracy(int accuracy) {
-        List<Accuracies> list = Arrays.stream(Accuracies.values()).sorted(Comparator.comparingInt(Accuracies::getAccuracy)).collect(Collectors.toList());
+        List<Accuracies> list = Arrays.stream(Accuracies.values()).sorted(Comparator.comparingInt(Accuracies::getAccuracy)).toList();
         for (Accuracies accuracies : list) {
             if(accuracy <= accuracies.getAccuracy()){
                 return accuracies;
@@ -185,21 +222,36 @@ public abstract class ElixirItem extends Item implements IElixirItem{
     }
 
     public enum Accuracies{
-        TRASH(20),
-        TOXIC(40),
-        COMMON(60),
-        NICE(80),
-        PERFECT(90),
-        MASTER(100);
+        TRASH(20, ChatFormatting.DARK_GRAY),
+        TOXIC(40, ChatFormatting.DARK_GREEN),
+        COMMON(60, ChatFormatting.GREEN),
+        NICE(70, ChatFormatting.BLUE),
+        EXCELLENT(80, ChatFormatting.DARK_BLUE),
+        PERFECT(90, ChatFormatting.DARK_PURPLE),
+        MASTER(100, ChatFormatting.GOLD);
 
         private final int accuracy;
+        private final List<ChatFormatting> formats;
 
-        Accuracies(int accuracy){
+        public static MutableComponent getComponent(Accuracies accuracy){
+            return new TranslatableComponent("misc.immortal.accuracy." + accuracy.toString().toLowerCase(Locale.ROOT)).withStyle(accuracy.getFormats());
+        }
+
+        public static boolean hasUsage(Accuracies accuracy){
+            return accuracy != Accuracies.TRASH && accuracy != Accuracies.TOXIC;
+        }
+
+        Accuracies(int accuracy, ChatFormatting ... formats) {
+            this.formats = List.of(formats);
             this.accuracy = accuracy;
         }
 
         public int getAccuracy() {
             return accuracy;
+        }
+
+        public ChatFormatting[] getFormats(){
+            return this.formats.toArray(new ChatFormatting[0]);
         }
     }
 }
